fix(bug): 🐛 special character menu cannot be used on mobile devices

--- a/skinStyles/extensions/VisualEditor/ext.visualEditor.less
+++ b/skinStyles/extensions/VisualEditor/ext.visualEditor.less
@@ -275,15 +275,8 @@
 // Make toolbar more smaller screen friendly
 // Well at least I did by best
 @media ( max-width: 800px ) {
-	.ve-ui-toolbar {
-		> .oo-ui-toolbar-bar {
-			display: flex;
-			flex-wrap: wrap;
-		}
-
-		&-floating {
-			z-index: 4;
-		}
+	.ve-ui-toolbar-floating {
+		z-index: 4;
 	}
 
 	.ve-init-mw-desktopArticleTarget {
